<resources>
    <string name="app_name">Calculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Einstellungen</string>

    <string name="nineNumber">9</string>
    <string name="eightNumber">8</string>
    <string name="sevenNumber">7</string>
    <string name="sixNumber">6</string>
    <string name="fiveNumber">5</string>
    <string name="fourNumber">4</string>
    <string name="threeNumber">3</string>
    <string name="twoNumber">2</string>
    <string name="oneNumber">1</string>
    <string name="zeroNumber">0</string>

    <string name="collonSign">,</string>
    <string name="divideSign">%</string>
    <string name="multiplySign">x</string>
    <string name="substractSign">-</string>
    <string name="addSign">+</string>
    <string name="equalSign">=</string>
    <string name="clearSign">C</string>

    <string name="malformedException">Die Gleichung ist nicht korrekt aufgebaut.</string>
    <string name="bracketLeft">(</string>
    <string name="bracketRight">)</string>
    <string name="autoCalculateSummary">Wenn diese Option aktiviert ist, wird nach jeder Eingabe ein Ergebnis berechnet, sofern dies möglich ist.</string>
    <string name="autoCalculate">Auomatische Berechnung</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customRenderSummary">Aktivieren, um die Custom Render Engine zu benutzen. ACHTUNG: es werden nicht alle Inhalte korrekt dargestellt.</string>
    <string name="customRenderTitle">Custom Render Engine</string>
</resources>
