<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="us.team.awesome.calculator.activities.MainActivity"
    android:layout_gravity="start"
    tools:showIn="@layout/app_bar_main">


    <us.team.awesome.calculator.components.EquationView
        android:id="@+id/equationView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical"
        />

    <LinearLayout
        android:id="@+id/linearLayoutTastatur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/equationView"
        android:weightSum="5">

    <LinearLayout
        android:id="@+id/linearLayoutRowClear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_below="@id/equationView"
        android:weightSum="4">
        <Button
            android:id="@+id/clearButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/clearSign">
        </Button>
        <Button
            android:id="@+id/divideButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="divideClickedListener"
            android:text="@string/divideSign">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutRow789"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayoutRowClear"
        android:weightSum="4">
        <Button
            android:id="@+id/sevenButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="numberClickedListener"
            android:text="@string/sevenNumber">
        </Button>
        <Button
            android:id="@+id/eightButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="numberClickedListener"
            android:text="@string/eightNumber">
        </Button>
        <Button
            android:id="@+id/nineButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="numberClickedListener"
            android:text="@string/nineNumber">
        </Button>
        <Button
            android:id="@+id/multiplyButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="multiplyClickedListener"
            android:text="@string/multiplySign">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRow456"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayoutRow789"
        android:weightSum="4">
        <Button
            android:id="@+id/fourButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="numberClickedListener"
            android:text="@string/fourNumber">
        </Button>
        <Button
            android:id="@+id/fiveButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="numberClickedListener"
            android:text="@string/fiveNumber">
        </Button>
        <Button
            android:id="@+id/sixButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="numberClickedListener"
            android:text="@string/sixNumber">
        </Button>
        <Button
            android:id="@+id/substractButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="subtractClickedListener"
            android:text="@string/substractSign">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutRow123"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayoutRow456"
        android:weightSum="4">
        <Button
            android:id="@+id/oneButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="numberClickedListener"
            android:text="@string/oneNumber">
        </Button>
        <Button
            android:id="@+id/twoButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="numberClickedListener"
            android:text="@string/twoNumber">
        </Button>
        <Button
            android:id="@+id/threeButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="numberClickedListener"
            android:text="@string/threeNumber">
        </Button>
        <Button
            android:id="@+id/addButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addClickedListener"
            android:text="@string/addSign">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayoutRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayoutRow123"
        android:weightSum="4">
        <Button
            android:id="@+id/zeroButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="numberClickedListener"
            android:text="@string/zeroNumber">
        </Button>
        <Button
            android:id="@+id/collonButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="colonClickedListener"
            android:text="@string/collonSign">
        </Button>
        <Button
            android:id="@+id/equalButton"
            style="@style/defaultTextSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="calculateClickedListener"
            android:text="@string/equalSign">
        </Button>
    </LinearLayout>
</LinearLayout>

</RelativeLayout>
